fix: color contrast for tldr

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -71,7 +71,7 @@ $colors: (
   --section-color-dark: var(--color-#{$color}-dark);
   --section-color-light: var(--color-#{$color}-light);
 
-  @if $dark and $color != "blue" and $color != "gray" {
+  @if $dark and $color != "blue" and $color != "yellow" and $color != "gray" {
     --section-color: var(--color-#{$color}-dark);
     --section-color-alt: var(--color-#{$color}-light);
 
